[package]
name = "mui"
version = "0.1.0"
edition = "2018"
resolver = "2"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
wgpu = "0.10.1"
bytemuck = { version = "1.7.2", features = [ "derive" ] }
env_logger = "0.9.0"
log = "0.4.14"
futures = "0.3.17"
hashbrown = "0.11.2"
image = "0.23.14"
ab_glyph = "0.2.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = { version = "0.25.0", features = ["web-sys"] }
wasm-bindgen = "0.2.77"
web-sys = "0.3.51"
